--- a/ex2/Assignment2.ipynb
+++ b/ex2/Assignment2.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "DEBUG = True\n",
-    "data_location = '../../data/ratings.csv' ## location of ratings.csv"
+    "data_location = '../data/ratings.csv' ## location of ratings.csv"
    ]
   },
   {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -755,8 +755,13 @@
     "    self.y_ = y\n",
     "    np.random.seed(1)\n",
     "    \n",
+    "    self.mu_ = np.mean(y)\n",
+    "    self.P_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_users*self.k)).reshape(n_users, self.k)\n",
+    "    self.Q_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_items*self.k)).reshape(n_items, self.k)\n",
+    "    self.bu_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_users)).reshape(n_users,)\n",
+    "    self.bi_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_items)).reshape(n_items,)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    ## random shuffle the training data\n",
     "    self.X_, self.y_ = shuffle(self.X_, self.y_)\n",
@@ -785,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -806,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -820,7 +825,31 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mf.mu_ = 3.5385\n",
+      "\n",
+      "parameters before training:\n",
+      "mf.P_ = [[ 0.1624 -0.0612 -0.0528 -0.1073  0.0865]\n",
+      " [-0.2302  0.1745 -0.0761  0.0319 -0.0249]\n",
+      " [ 0.1462 -0.206  -0.0322 -0.0384  0.1134]\n",
+      " ...\n",
+      " [ 0.0736 -0.0751 -0.0063 -0.02    0.008 ]\n",
+      " [-0.0331  0.1172 -0.0343 -0.0628 -0.0425]\n",
+      " [ 0.0315  0.0229  0.0233 -0.0419 -0.0543]]\n",
+      "mf.Q_ = [[ 0.1182 -0.1105  0.0121  0.0044  0.0354]\n",
+      " [ 0.0142  0.1286  0.024   0.1653 -0.0519]\n",
+      " [ 0.0515 -0.0941 -0.1337  0.0395 -0.0346]\n",
+      " ...\n",
+      " [ 0.0525 -0.0582 -0.1166  0.0404 -0.036 ]\n",
+      " [ 0.0518  0.0134 -0.1122  0.0342  0.006 ]\n",
+      " [-0.0915 -0.025   0.1451 -0.1112 -0.1196]]\n"
+     ]
+    }
+   ],
    "source": [
     "if DEBUG:\n",
     "    mf = MatrixFactorization()\n",
@@ -939,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -974,8 +1003,23 @@
     "            r_ui = self.y_[index]\n",
     "            \n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
-    "\n",
+    "            # raise NotImplementedError()\n",
+    "            \n",
+    "            prediction = self.mu_ * int(self.w_average) + \\\n",
+    "                (self.bu_[u] + self.bi_[i]) * int(self.w_biases) + \\\n",
+    "                (np.transpose(self.P_[u,])).dot(self.Q_[i,]) \n",
+    "            \n",
+    "            err = r_ui - prediction\n",
+    "            \n",
+    "            delta_P = self.eta * (err * self.Q_[i,] - self.lam * self.P_[u,])\n",
+    "            delta_Q = self.eta * (err * self.P_[u,] - self.lam * self.Q_[i,])\n",
+    "            self.P_[u] += delta_P\n",
+    "            self.Q_[i] += delta_Q\n",
+    "            \n",
+    "            if(self.w_biases):\n",
+    "                self.bu_[u] += self.eta * (err - self.lam * self.bu_[u])\n",
+    "                self.bi_[i] += self.eta * (err - self.lam * self.bi_[i])\n",
+    "        \n",
     "            epoch_loss += err * err\n",
     "\n",
     "        ## epoch is done\n",
@@ -1020,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1042,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1056,7 +1100,63 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model without baseline\n",
+      "{'eta': 0.002, 'k': 5, 'lam': 0.0, 'n_epochs': 5, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1, 'w_average': False, 'w_biases': False}\n",
+      "start of training\n",
+      "epoch 0 loss = 13.6396\n",
+      "epoch 1 loss = 13.3272\n",
+      "epoch 2 loss = 7.6270\n",
+      "epoch 3 loss = 2.8473\n",
+      "epoch 4 loss = 1.7362\n",
+      "\n",
+      "after training:\n",
+      "mf.P_ = [[-0.1591 -0.0148 -0.1066  0.3266 -0.6042]\n",
+      " [-0.4755  0.2098 -0.129   0.3662 -0.5778]\n",
+      " [-0.2756 -0.1393 -0.1146  0.486  -0.7557]\n",
+      " ...\n",
+      " [-0.212  -0.0169 -0.0429  0.3817 -0.7504]\n",
+      " [-0.2513  0.1561 -0.0853  0.233  -0.5587]\n",
+      " [-0.2273  0.0671 -0.0451  0.306  -0.6749]]\n",
+      "mf.Q_ = [[-1.5514e+00  3.1594e-01 -3.2202e-01  2.2479e+00 -3.8598e+00]\n",
+      " [-1.1378e+00  3.5965e-01 -2.3034e-01  1.7350e+00 -3.1345e+00]\n",
+      " [-1.1390e+00  1.5780e-01 -3.8466e-01  1.6429e+00 -2.9815e+00]\n",
+      " ...\n",
+      " [-4.4201e-02 -4.9056e-02 -1.0655e-01  1.7179e-01 -2.4416e-01]\n",
+      " [-1.8324e-01 -1.8519e-03 -1.6614e-01  3.5794e-01 -5.6453e-01]\n",
+      " [-9.4285e-01  7.5904e-02  1.0345e-02  9.7154e-01 -2.0275e+00]]\n",
+      "\n",
+      "model with baseline\n",
+      "{'eta': 0.002, 'k': 5, 'lam': 0.0, 'n_epochs': 5, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1, 'w_average': True, 'w_biases': True}\n",
+      "start of training\n",
+      "epoch 0 loss = 0.9467\n",
+      "epoch 1 loss = 0.8575\n",
+      "epoch 2 loss = 0.8225\n",
+      "epoch 3 loss = 0.8005\n",
+      "epoch 4 loss = 0.7851\n",
+      "\n",
+      "after training:\n",
+      "mf.P_ = [[ 0.1623 -0.0605 -0.0533 -0.1063  0.0839]\n",
+      " [-0.2414  0.1708 -0.0822  0.0332 -0.0291]\n",
+      " [ 0.1434 -0.207  -0.0311 -0.0419  0.1164]\n",
+      " ...\n",
+      " [ 0.0855 -0.0636 -0.0119 -0.0226 -0.0033]\n",
+      " [-0.0315  0.1172 -0.0371 -0.063  -0.0469]\n",
+      " [ 0.0273  0.0182  0.0177 -0.046  -0.0552]]\n",
+      "mf.Q_ = [[ 0.0179 -0.1098  0.0332 -0.0495  0.0283]\n",
+      " [ 0.0189  0.1328  0.1121  0.1405 -0.0661]\n",
+      " [ 0.0431 -0.0688 -0.1359  0.0334 -0.0392]\n",
+      " ...\n",
+      " [ 0.0567 -0.0603 -0.1154  0.0364 -0.0378]\n",
+      " [ 0.0622  0.0091 -0.1183  0.0226  0.0074]\n",
+      " [-0.1064 -0.0215  0.1434 -0.1054 -0.1111]]\n"
+     ]
+    }
+   ],
    "source": [
     "if DEBUG:   \n",
     "    print(\"model without baseline\")\n",
@@ -1200,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1231,7 +1331,10 @@
     "        i = I[index]\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
+    "        prediction = self.mu_ * int(self.w_average) + \\\n",
+    "                (self.bu_[u] + self.bi_[i]) * int(self.w_biases) + \\\n",
+    "                (np.transpose(self.P_[u,])).dot(self.Q_[i,]) \n",
     "        \n",
     "        y_pred[index] = prediction\n",
     "\n",
@@ -1265,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1286,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1300,7 +1403,24 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE 0.8810\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([3.2302, 4.0319, 3.8615, ..., 3.4563, 4.2125, 3.3993])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if DEBUG:\n",
     "    display(mf.predict(X, y))"
@@ -1375,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1428,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1469,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1483,7 +1603,31 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eta': 0.002, 'k': 10, 'lam': 0.001, 'n_epochs': 10, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1, 'w_average': True, 'w_biases': True}\n",
+      "start of training\n",
+      "epoch 0 loss = 0.9507\n",
+      "epoch 1 loss = 0.8590\n",
+      "epoch 2 loss = 0.8233\n",
+      "epoch 3 loss = 0.8007\n",
+      "epoch 4 loss = 0.7848\n",
+      "epoch 5 loss = 0.7728\n",
+      "epoch 6 loss = 0.7634\n",
+      "epoch 7 loss = 0.7558\n",
+      "epoch 8 loss = 0.7495\n",
+      "epoch 9 loss = 0.7441\n",
+      "CPU times: user 1min 20s, sys: 2.17 s, total: 1min 22s\n",
+      "Wall time: 1min 19s\n",
+      "RMSE 0.8596\n",
+      "y_pred [3.1834 3.8928 3.8292 ... 3.5132 4.2303 3.4907]\n",
+      "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
+     ]
+    }
+   ],
    "source": [
     "mf = MatrixFactorization()\n",
     "mf.k = 10\n",
@@ -1541,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1555,7 +1699,31 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eta': 0.002, 'k': 10, 'lam': 0.001, 'n_epochs': 10, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1, 'w_average': True, 'w_biases': False}\n",
+      "start of training\n",
+      "epoch 0 loss = 1.1210\n",
+      "epoch 1 loss = 1.1201\n",
+      "epoch 2 loss = 1.1192\n",
+      "epoch 3 loss = 1.1182\n",
+      "epoch 4 loss = 1.1170\n",
+      "epoch 5 loss = 1.1155\n",
+      "epoch 6 loss = 1.1131\n",
+      "epoch 7 loss = 1.1094\n",
+      "epoch 8 loss = 1.1033\n",
+      "epoch 9 loss = 1.0929\n",
+      "CPU times: user 1min 12s, sys: 1.49 s, total: 1min 14s\n",
+      "Wall time: 1min 11s\n",
+      "RMSE 1.0415\n",
+      "y_pred [3.5056 3.5049 3.6028 ... 3.5148 3.4788 3.5145]\n",
+      "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
+     ]
+    }
+   ],
    "source": [
     "mf = MatrixFactorization()\n",
     "mf.k = 10\n",
@@ -1957,7 +2125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
