initial attempt bonus point

--- a/ex2/Assignment2.ipynb
+++ b/ex2/Assignment2.ipynb
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1620,8 +1620,8 @@
       "epoch 7 loss = 0.7558\n",
       "epoch 8 loss = 0.7495\n",
       "epoch 9 loss = 0.7441\n",
-      "CPU times: user 1min 20s, sys: 2.17 s, total: 1min 22s\n",
-      "Wall time: 1min 19s\n",
+      "CPU times: user 1min 33s, sys: 648 ms, total: 1min 34s\n",
+      "Wall time: 1min 33s\n",
       "RMSE 0.8596\n",
       "y_pred [3.1834 3.8928 3.8292 ... 3.5132 4.2303 3.4907]\n",
       "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1699,31 +1699,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eta': 0.002, 'k': 10, 'lam': 0.001, 'n_epochs': 10, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1, 'w_average': True, 'w_biases': False}\n",
-      "start of training\n",
-      "epoch 0 loss = 1.1210\n",
-      "epoch 1 loss = 1.1201\n",
-      "epoch 2 loss = 1.1192\n",
-      "epoch 3 loss = 1.1182\n",
-      "epoch 4 loss = 1.1170\n",
-      "epoch 5 loss = 1.1155\n",
-      "epoch 6 loss = 1.1131\n",
-      "epoch 7 loss = 1.1094\n",
-      "epoch 8 loss = 1.1033\n",
-      "epoch 9 loss = 1.0929\n",
-      "CPU times: user 1min 12s, sys: 1.49 s, total: 1min 14s\n",
-      "Wall time: 1min 11s\n",
-      "RMSE 1.0415\n",
-      "y_pred [3.5056 3.5049 3.6028 ... 3.5148 3.4788 3.5145]\n",
-      "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mf = MatrixFactorization()\n",
     "mf.k = 10\n",
@@ -1810,7 +1786,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = sp.vstack([X.getrow(100), X.getrow(200), X.getrow(300)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = X2.indices[0::2] - n_users\n",
+    "u = X2.indices[1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PB = mf.P_[u,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QB = mf.P_[i,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.0368, -0.1142, -0.0708,  0.1765,  0.0292, -0.0698,  0.0155,\n",
+       "         0.1778, -0.0084,  0.014 ],\n",
+       "       [-0.0849,  0.1213,  0.0634, -0.0106,  0.0595, -0.0037,  0.1217,\n",
+       "         0.1539,  0.1891, -0.1435],\n",
+       "       [ 0.1216,  0.0246, -0.0413, -0.0581,  0.0406,  0.006 , -0.0308,\n",
+       "        -0.0011, -0.0648,  0.0701]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.0446, -0.0062,  0.0527,  0.2155,  0.0148,  0.1388,  0.089 ,\n",
+       "         0.105 , -0.0151,  0.1684],\n",
+       "       [ 0.1865,  0.0379,  0.1061, -0.027 ,  0.0695, -0.0373,  0.0752,\n",
+       "         0.0641, -0.1118, -0.072 ],\n",
+       "       [ 0.0254,  0.1166, -0.215 ,  0.0073, -0.0275,  0.0035,  0.0255,\n",
+       "         0.0928,  0.0608, -0.035 ]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QB"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[[100,200,300]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = np.dot(PB, QB.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.0499, -0.0064,  0.0171],\n",
+       "       [ 0.0044,  0.0083,  0.0306],\n",
+       "       [-0.0089,  0.0232,  0.006 ]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.0499, -0.0064,  0.0171],\n",
+       "       [ 0.0044,  0.0083,  0.0306],\n",
+       "       [-0.0089,  0.0232,  0.006 ]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.inner(PB, QB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = y[[100,200,300]] - prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "self.eta * (err - self.lam * self.bu_[u]).mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1840,8 +1983,6 @@
     "            excerpt = slice(start_idx, end_idx)\n",
     "        yield inputs[excerpt], targets[excerpt]\n",
     "\n",
-    "\n",
-    "\n",
     "def fit_mgd(self): ## minibatch gradient descent, vectorized        \n",
     "\n",
     "    if VERBOSE:\n",
@@ -1857,10 +1998,31 @@
     "        epoch_loss = 0.\n",
     "\n",
     "        for XB, yB in iterate_minibatches(self.X_, self.y_, self.s_batch):\n",
+    "            u = XB.indices[0::2]\n",
+    "            i = XB.indices[1::2] - self.n_users_\n",
     "            \n",
+    "            prediction = self.mu_ * int(self.w_average) + \\\n",
+    "                (self.bu_[u] + self.bi_[i]) * int(self.w_biases) + \\\n",
+    "                np.dot(self.P_[u,], self.Q_[i,].T)\n",
+    "            \n",
+    "            #prediction = self.mu_ * int(self.w_average) + np.dot(self.P_[u,], self.Q_[i,].T)\n",
+    "            \n",
+    "            err = yB - prediction\n",
+    "            \n",
+    "            delta_P = self.eta * (np.dot(err, self.Q_[i,]) - self.lam * self.P_[u,])\n",
+    "            delta_Q = self.eta * (np.dot(err, self.P_[u,]) - self.lam * self.Q_[i,])\n",
+    "            self.P_[u] += delta_P\n",
+    "            self.Q_[i] += delta_Q\n",
+    "            \n",
+    "            if(self.w_biases):\n",
+    "                self.bu_[u] += self.eta * (err - self.lam * self.bu_[u]).mean(axis=0)\n",
+    "                self.bi_[i] += self.eta * (err - self.lam * self.bu_[i]).mean(axis=0)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
-    "\n",
+    "            # raise NotImplementedError()\n",
+    "            \n",
+    "            #epoch_loss += (err*err).sum(axis=0).mean()\n",
+    "            epoch_loss += (err*err).sum()/err.shape[0]\n",
+    "            \n",
     "        epoch_loss /= self.n_ratings_\n",
     "        obs.loss = epoch_loss\n",
     "        \n",
@@ -1892,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1906,7 +2068,34 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eta': 0.002, 'k': 10, 'lam': 0.001, 'n_epochs': 10, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1000, 'w_average': True, 'w_biases': False}\n",
+      "start training\n",
+      "9924 968\n",
+      "X_ (394638, 10892)\n",
+      "self.P_ (9924, 10)\n",
+      "epoch 0 loss = 1.1206\n",
+      "epoch 1 loss = 1.1201\n",
+      "epoch 2 loss = 1.1200\n",
+      "epoch 3 loss = 1.1200\n",
+      "epoch 4 loss = 1.1199\n",
+      "epoch 5 loss = 1.1196\n",
+      "epoch 6 loss = 1.1189\n",
+      "epoch 7 loss = 1.1175\n",
+      "epoch 8 loss = 1.1162\n",
+      "epoch 9 loss = 1.1156\n",
+      "CPU times: user 1min 16s, sys: 807 ms, total: 1min 16s\n",
+      "Wall time: 38.6 s\n",
+      "RMSE 1.0566\n",
+      "y_pred [3.5946 3.7402 3.537  ... 3.5739 3.5614 3.4901]\n",
+      "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
+     ]
+    }
+   ],
    "source": [
     "mf = MatrixFactorization()\n",
     "mf.k = 10\n",
@@ -1968,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1982,7 +2171,34 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eta': 0.002, 'k': 10, 'lam': 0.001, 'n_epochs': 10, 'rnd_mean': 0, 'rnd_std': 0.1, 's_batch': 1000, 'w_average': True, 'w_biases': True}\n",
+      "start training\n",
+      "9924 968\n",
+      "X_ (394638, 10892)\n",
+      "self.P_ (9924, 10)\n",
+      "epoch 0 loss = 1.0181\n",
+      "epoch 1 loss = 0.8907\n",
+      "epoch 2 loss = 0.8397\n",
+      "epoch 3 loss = 0.8124\n",
+      "epoch 4 loss = 0.7947\n",
+      "epoch 5 loss = 0.7819\n",
+      "epoch 6 loss = 0.7721\n",
+      "epoch 7 loss = 0.7643\n",
+      "epoch 8 loss = 0.7581\n",
+      "epoch 9 loss = 0.7529\n",
+      "CPU times: user 1min 38s, sys: 784 ms, total: 1min 38s\n",
+      "Wall time: 49.5 s\n",
+      "RMSE 0.8651\n",
+      "y_pred [3.1926 3.9284 3.8465 ... 3.4662 4.2288 3.4222]\n",
+      "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
+     ]
+    }
+   ],
    "source": [
     "mf = MatrixFactorization()\n",
     "mf.k = 10\n",
