updated initialize // removed reshape

--- a/ex2/Assignment2.ipynb
+++ b/ex2/Assignment2.ipynb
@@ -758,10 +758,10 @@
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
     "    self.mu_ = np.mean(y)\n",
-    "    self.P_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_users*self.k)).reshape(n_users, self.k)\n",
-    "    self.Q_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_items*self.k)).reshape(n_items, self.k)\n",
-    "    self.bu_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_users)).reshape(n_users,)\n",
-    "    self.bi_ = (np.random.normal(self.rnd_mean, self.rnd_std, n_items)).reshape(n_items,)\n",
+    "    self.P_ = (np.random.normal(self.rnd_mean, self.rnd_std, (n_users, self.k)))\n",
+    "    self.Q_ = (np.random.normal(self.rnd_mean, self.rnd_std, (n_items, self.k)))\n",
+    "    self.bu_ = (np.random.normal(self.rnd_mean, self.rnd_std, (n_users,)))\n",
+    "    self.bi_ = (np.random.normal(self.rnd_mean, self.rnd_std, (n_items,)))\n",
     "    \n",
     "    \n",
     "    ## random shuffle the training data\n",
@@ -1626,7 +1626,7 @@
       "epoch 7 loss = 0.7558\n",
       "epoch 8 loss = 0.7495\n",
       "epoch 9 loss = 0.7441\n",
-      "Wall time: 1min 3s\n",
+      "Wall time: 1min 6s\n",
       "RMSE 0.8596\n",
       "y_pred [3.1834 3.8928 3.8292 ... 3.5132 4.2303 3.4907]\n",
       "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
@@ -1721,7 +1721,7 @@
       "epoch 7 loss = 1.1094\n",
       "epoch 8 loss = 1.1033\n",
       "epoch 9 loss = 1.0929\n",
-      "Wall time: 57.9 s\n",
+      "Wall time: 60 s\n",
       "RMSE 1.0415\n",
       "y_pred [3.5056 3.5049 3.6028 ... 3.5148 3.4788 3.5145]\n",
       "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
@@ -1964,7 +1964,7 @@
       "epoch 7 loss = 1.1094\n",
       "epoch 8 loss = 1.1033\n",
       "epoch 9 loss = 1.0929\n",
-      "Wall time: 1min 3s\n",
+      "Wall time: 1min 9s\n",
       "RMSE 1.0415\n",
       "y_pred [3.5057 3.5049 3.6028 ... 3.5149 3.4789 3.5144]\n",
       "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
@@ -2066,7 +2066,7 @@
       "epoch 7 loss = 0.7558\n",
       "epoch 8 loss = 0.7495\n",
       "epoch 9 loss = 0.7441\n",
-      "Wall time: 1min 4s\n",
+      "Wall time: 1min 10s\n",
       "RMSE 0.8596\n",
       "y_pred [3.1836 3.8929 3.8292 ... 3.5137 4.2303 3.4914]\n",
       "y [3.5 3.5 3.5 ... 3.5 4.  5. ]\n"
@@ -2201,9 +2201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "recsys",
    "language": "python",
-   "name": "python3"
+   "name": "recsys"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2215,7 +2215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
