--- a/ex3/Assignment3.ipynb
+++ b/ex3/Assignment3.ipynb
@@ -1040,12 +1040,12 @@
     "    item_vecs = self.get_item_vectors(item_ids_rated_by_user_id)\n",
     "    weights = user_ratings / user_ratings.sum()\n",
     "    \n",
-    "    # without matrix multiplication\n",
-    "    # row_lengths = item_vecs.indptr[1:] - item_vecs.indptr[:-1]\n",
-    "    # item_vecs.data *= np.repeat(weights, row_lengths)\n",
+    "    # without matrix multiplication since this is way faster\n",
+    "    row_lengths = item_vecs.indptr[1:] - item_vecs.indptr[:-1]\n",
+    "    item_vecs.data *= np.repeat(weights, row_lengths)\n",
     "    \n",
     "    # with matrix multiplication\n",
-    "    item_vecs = sp.csr_matrix(item_vecs).multiply(sp.csr_matrix(weights).T)\n",
+    "    # item_vecs = sp.csr_matrix(item_vecs).multiply(sp.csr_matrix(weights).T)\n",
     "\n",
     "    user_profile = item_vecs.sum(axis=0)\n",
     "    \n",
@@ -1379,11 +1379,14 @@
     "    # step 4\n",
     "    items_sorted_sim = np.array(self.item_ids)[index]\n",
     "    \n",
-    "    # step 5 + 6\n",
+    "    # step 5\n",
     "    recommendations = [x for x in items_sorted_sim if x not in item_ids_rated_by_user_id]\n",
     "    # recommendations = items_sorted_sim[~np.in1d(items_sorted_sim, item_ids_rated_by_user_id)].tolist()\n",
     "    \n",
-    "    return recommendations[:topN]\n",
+    "    # step 6\n",
+    "    recommendations = recommendations[:topN]\n",
+    "    \n",
+    "    return recommendations\n",
     "    "
    ]
   },
