added final version

--- a/ex3/Assignment3.ipynb
+++ b/ex3/Assignment3.ipynb
@@ -1048,7 +1048,7 @@
     "    # item_vecs = sp.csr_matrix(item_vecs).multiply(sp.csr_matrix(weights).T)\n",
     "\n",
     "    user_profile = item_vecs.sum(axis=0)\n",
-    "    \n",
+    "\n",
     "    user_profile = pp.normalize(user_profile)\n",
     "\n",
     "    return user_profile "
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1361,31 +1361,31 @@
     "    if from_item_ids is None:\n",
     "        from_item_ids = self.item_ids\n",
     "\n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
     "\n",
-    "    # retrieve user profile\n",
+    "    # step 1- retrieve user profile\n",
     "    user_profile = self.user_profiles.get(user_id)\n",
+    "\n",
+    "    # step 2 compute cosine similarity\n",
+    "    # sims = linear_kernel(user_profile, self.tfidf)\n",
+    "    sims = linear_kernel(user_profile, self.get_item_vectors(from_item_ids))\n",
     "    \n",
-    "    # retrieve td-idf vectors\n",
-    "    item_vecs = self.get_item_vectors(from_item_ids)\n",
-    "    \n",
-    "    # compute cosine similarity\n",
-    "    sims = linear_kernel(user_profile, item_vecs).flatten()\n",
-    "    # print(sims)\n",
-    "    index = np.argsort(sims)[::-1]\n",
-    "    # print(index)\n",
+    "    # step 3\n",
+    "    index = np.argsort(sims, axis = None)[::-1]\n",
     "    \n",
     "    # step 4\n",
-    "    items_sorted_sim = np.array(self.item_ids)[index]\n",
+    "    # items_sorted_sim = np.array(self.items_meta['item_id'])[index]\n",
+    "    items_sorted_sim = np.array(from_item_ids)[index]\n",
     "    \n",
     "    # step 5\n",
+    "    # recommendations = [x for x in items_sorted_sim if x in from_item_ids and x not in item_ids_rated_by_user_id]\n",
     "    recommendations = [x for x in items_sorted_sim if x not in item_ids_rated_by_user_id]\n",
-    "    # recommendations = items_sorted_sim[~np.in1d(items_sorted_sim, item_ids_rated_by_user_id)].tolist()\n",
     "    \n",
     "    # step 6\n",
     "    recommendations = recommendations[:topN]\n",
-    "    \n",
+    "\n",
     "    return recommendations\n",
     "    "
    ]
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
