upload tuwel version

--- a/ex4/Assignment4.ipynb
+++ b/ex4/Assignment4.ipynb
@@ -812,7 +812,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "52aa3748852123258f124a4c7c42e7df",
+     "checksum": "691cb0cb798e45259b667d9837057636",
      "grade": false,
      "grade_id": "cell-7b070ab7517ecb80",
      "locked": true,
@@ -824,9 +824,10 @@
     "**EXPECTED OUTPUT:**\n",
     "```\n",
     "[92, 71, 50, 37, 65, 29, 61, 79, 39, 47, 2, 84, 88, 73, 21, 86, 51, 7, 13, 67]\n",
-    "[16, 36, 8, 21, 94, 69, 76, 35, 89, 52, 23, 84, 99, 67, 77, 75, 74, 73, 72, 71]\n",
+    "[16, 36, 8, 21, 94, 69, 76, 35, 89, 52, 23, 84, 99, X, X, X, X, X, X, X]\n",
     "[32, 23, 45, 87, 40, 17, 81, 15, 25, 16, 84, 30, 38, 2, 34, 44, 13, 62, 88, 37]\n",
-    "```"
+    "```\n",
+    "where `X` means any item id, as from this point on all remaining items have zero similarity with the user profile."
    ]
   },
   {
@@ -984,53 +985,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ground_truth = {200:5, 100:4, 400:3, 1000:3}\n",
-    "\n",
-    "ranking = list(range(100, 1100, 100))\n",
-    "n_test = len(ground_truth)\n",
-    "\n",
-    "#if n_test == 0:\n",
-    "#    return None\n",
-    "        \n",
-    "hits = 0 ## number of relevant in ranking\n",
-    "rec = [] ## recall at every position of ranking\n",
-    "prec = [] ## precision at every position of ranking\n",
-    "dcg = [] ## DCG at every position of ranking\n",
-    "ap = 0 ## average precision\n",
-    "\n",
-    "relevant_bool = [(x in ground_truth) for x in ranking]\n",
-    "relevance = [ground_truth.get(x,0) for x in ranking]\n",
-    "relevant_retrieved = np.cumsum(relevant_bool)\n",
-    "\n",
-    "i = np.arange(len(ranking)) + 1\n",
-    "hits = np.sum(relevant_bool)\n",
-    "rec = (relevant_retrieved / hits).tolist()\n",
-    "prec = (relevant_retrieved / i).tolist()\n",
-    "\n",
-    "discounted_rel = lambda x : 2**x - 1\n",
-    "\n",
-    "dcg = np.cumsum(list(map(discounted_rel, relevance)) / np.log(i+1))\n",
-    "ap = np.sum((np.array(prec)[relevant_bool])) / hits\n",
-    "\n",
-    "\n",
-    "ideal = sorted(ground_truth, key=ground_truth.get, reverse=True)\n",
-    "idcg = []\n",
-    "        \n",
-    "## scan the ideal ranking and compute idcg\n",
-    "# YOUR CODE HERE\n",
-    "# raise NotImplementedError()\n",
-    "\n",
-    "ideal_bool = [x in ground_truth for x in ideal]\n",
-    "ideal_val = [ground_truth.get(x) for x in ideal]\n",
-    "idcg = np.cumsum(list(map(lambda x : 2**x - 1, ideal_val)) / np.log(i+1)[:hits])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1089,7 +1043,7 @@
     "        \n",
     "        ## get the test ratings of user_id as a DataFrame subset of `self.ratings_test`\n",
     "        # YOUR CODE HERE\n",
-    "        #raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
     "        user_ratings = self.ratings_test[self.ratings_test['user'] == user_id]\n",
     "        \n",
     "        ## dictionary of ground truth ratings\n",
@@ -1198,6 +1152,7 @@
     "        dcg = [] ## DCG at every position of ranking\n",
     "        ap = 0 ## average precision\n",
     "        \n",
+    "        \n",
     "        ## scan the ranking and compute hits, rec, prec, dcg, ap\n",
     "        # YOUR CODE HERE\n",
     "        # raise NotImplementedError()\n",
@@ -1229,7 +1184,7 @@
     "        ## scan the ideal ranking and compute idcg\n",
     "        # YOUR CODE HERE\n",
     "        # raise NotImplementedError()\n",
-    " \n",
+    "        \n",
     "        ideal_relevance = [ground_truth.get(x,0) for x in ideal]\n",
     "        idcg = np.cumsum(list(map(discounted_rel, ideal_relevance)) / np.log1p(i)[:hits]).tolist()   \n",
     "        \n",
@@ -1286,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1313,7 +1268,7 @@
        "        0.7998, 0.8429])}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1419,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1440,7 +1395,7 @@
        "{6: 5.0000, 21: 5.0000}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1500,7 +1455,7 @@
        "        0.5803, 0.5803, 0.5803, 0.5803])}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1590,7 +1545,7 @@
        "        1., 1., 1.])}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1680,7 +1635,7 @@
        "        0.3872, 0.3872, 0.3872, 0.3872])}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1762,7 +1717,7 @@
      "text": [
       "evaluated on 665 users\n",
       "\n",
-      "Wall time: 6.81 s\n"
+      "Wall time: 6.71 s\n"
      ]
     },
     {
@@ -1847,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1868,7 +1823,7 @@
      "text": [
       "evaluated on 665 users\n",
       "\n",
-      "Wall time: 2.62 s\n"
+      "Wall time: 2.71 s\n"
      ]
     },
     {
@@ -1953,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1972,9 +1927,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "evaluated on 665 users users\n",
+      "evaluated on 665 users\n",
       "\n",
-      "Wall time: 1.25 s\n"
+      "Wall time: 1.27 s\n"
      ]
     },
     {
@@ -2040,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2049,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2107,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
